--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
           <li>
             <a href="#portfolio">Work</a>
           </li>
+		<li>
+            <a href="/useful_links.md">Work</a>
+          </li>
           <li>
             <a href="#contact">Contact</a>
           </li>
