update website logo

--- a/index.html
+++ b/index.html
@@ -98,9 +98,6 @@
           <li>
             <a href="#portfolio">Work</a>
           </li>
-		<li>
-            <a href="/useful_links.md">Work</a>
-          </li>
           <li>
             <a href="#contact">Contact</a>
           </li>
@@ -121,13 +118,16 @@
                 <p class="script-font wow fadeInUp" data-wow-delay="0.6s">C# Software Developer</p>
                 <ul class="social-icon wow fadeInUp" data-wow-delay="0.8s">
                   <li>
+                    <a class="github" href="https://github.com/surendra37"><i class="icon-social-github"></i></a>
+                  </li>
+                  <li>
+                    <a class="linkedin" href="https://www.linkedin.com/in/surendra-shrestha-7a8151137/"><i class="icon-social-linkedin"></i></a>
+                  </li>
+                  <li>
                     <a class="facebook" href="https://www.facebook.com/surendrashrestha10"><i class="icon-social-facebook"></i></a>
                   </li>
                   <li>
                     <a class="twitter" href="https://twitter.com/suren_37"><i class="icon-social-twitter"></i></a>
-                  </li>
-                  <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/surendra-shrestha-7a8151137/"><i class="icon-social-linkedin"></i></a>
                   </li>
                 </ul>
                 <div class="header-button wow fadeInUp" data-wow-delay="1s">
@@ -154,21 +154,25 @@
           </div> 
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
-              <h3>Hi Guys!</h3>
-              <p>Welcome to my personal website. Here you can find my resume along with all of my personal info.</p>
+              <h3>Hi!</h3>
+              <p>To summarize myself in a few lines, I am a man with a few words with a deep passion for programming. 
+                I love to explore and learn new ideas and use it in service to others. 
+                I think, I can get a grasp of new technologies comparitevely faster and is always ready to learn something new. 
+              </p>
+              <p>Thank you. Have a great time. 😁😁😁🤙 </p>
               <div class="about-profile">
                 <ul class="admin-profile">
                   <li><span class="pro-title"> Name </span> <span class="pro-detail">Surendra Shrestha</span></li>
                   <li><span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span></li>
-                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">2 Years</span></li>
+                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">2+ Years</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">Nepal</span></li>
                   <li><span class="pro-title"> Location </span> <span class="pro-detail">Kathmandu</span></li>
-                  <li><span class="pro-title"> e-mail </span> <span class="pro-detail">shresthasurendra37@gmail.com</span></li>
+                  <li><span class="pro-title"> E-mail </span> <span class="pro-detail">shresthasurendra37@gmail.com</span></li>
                   <li><span class="pro-title"> Phone </span> <span class="pro-detail">+977 9843623018</span></li>
                   <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
                 </ul>
               </div>
-              <a href="https://drive.google.com/open?id=1EBrfzavB3nynfLRI0rWOQmEGdEOyyBuIEkvuk5cqVzY" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
+              <a href="https://drive.google.com/open?id=1y8to7fCw-R3FC3dRpeNkCN7-jPW0y91L" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
               <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
             </div>
           </div>   
@@ -240,6 +244,56 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="experience wow fadeInRight" data-wow-delay="0.6s">
+              <ul class="timeline">
+                <li>
+                  <i class="icon-briefcase"></i>
+                  <h2 class="timelin-title">Experience</h2>
+                </li>
+                <li>
+                  <div class="content-text">
+                    <h3 class="line-title">Software Developer - Asteroid Venture</h3>
+                    <span>Nov 2018 - Present</span>
+                    <p class="line-text">
+                      # Started working on Enterprise Content Management (ECM) Migration Software.<br />
+                      # Worked on migration of data from different ECM system to Microsoft's Sharepoint.<br />
+                      # Worked on Window's Communication Foundation (WCF) system and SQLite/SQLCe databases.<br />
+                      # Worked as a Window's Presentation Framework (WPF) developer for analyzer tools.<br />
+                      # Consuming SOAP and REST API<br />
+                      # .NET Core<br />
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="content-text">
+                    <h3 class="line-title">Dot net Developer - Dotmark Solutions</h3>
+                    <span>Nov 2017 - Nov 2018</span>
+                    <p class="line-text">
+                      # Started Programming career as a .NET Software programmer.<br />
+                      # Got involved on Desktop application for health/hospital management system.<br />
+                      # Worked on Windows Presentation Framework (WPF).<br />
+                      # Used Microsoft's 'Prism Framework' for MVVM (Model View ViewModel) implementation.<br />
+                      # Worked in NodeJS using Express Framework for API development.<br />
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="content-text">
+                    <h3 class="line-title">Hardware Programmer - Robotics & Automation Center</h3>
+                    <span>2014-2017</span>
+                    <p class="line-text">
+                      # Joined Robotics and Automation Center<br /> 
+                      # Learned to create/work with various electronics boards/circuits<br /> 
+                      # PCB design and micro-controller programming<br />
+                      # Worked on a team to create simple task completing robots and program it to perform those tasks using C programming language<br />
+                      # Participated in International Robotics Competition (IRC) held in Mumbai, India for two times<br />
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-6">
             <div class="education wow fadeInRight" data-wow-delay="0.3s">
               <ul class="timeline">
                 <li>
@@ -270,37 +324,13 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-6">
-            <div class="experience wow fadeInRight" data-wow-delay="0.6s">
-              <ul class="timeline">
-                <li>
-                  <i class="icon-briefcase"></i>
-                  <h2 class="timelin-title">Experience</h2>
-                </li>
-                <li>
-                  <div class="content-text">
-                    <h3 class="line-title">Software Developer - Asteroid Venture</h3>
-                    <span>Nov 2018 - Present</span>
-                    <p class="line-text">Currently working on Asteroid venture as a software developer, working on differents Desktop based application mostly focusing on Enterprise Content Management(ECM) Migration Software.</p>
-                  </div>
-                </li>
-                <li>
-                  <div class="content-text">
-                    <h3 class="line-title">Dot net Developer - Dotmark Solutions</h3>
-                    <span>Nov 2017 - Nov 2018</span>
-                    <p class="line-text">Started my first working experience as a .Net developer in Dotmark Solution where I was involved in developing desktop based application related to health sectors.</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
         </div>
       </div>
     </div>
     <!-- Resume Section End -->
 
     <!-- Portfolio Section -->
-    <section id="portfolios" class="section-padding">
+    <section id="portfolios" class="section-padding" >
       <!-- Container Starts -->
       <div class="container">        
         <h2 class="section-title wow flipInX" data-wow-delay="0.4s">My Remarkable Works</h2>
@@ -457,13 +487,16 @@
             <div class="footer-text text-center wow fadeInDown" data-wow-delay="0.3s">
               <ul class="social-icon">
                 <li>
+                  <a class="github" href="https://github.com/surendra37"><i class="icon-social-github"></i></a>
+                </li>
+                <li>
+                  <a class="linkedin" href="https://www.linkedin.com/in/surendra-shrestha-7a8151137/"><i class="icon-social-linkedin"></i></a>
+                </li>
+                <li>
                   <a class="facebook" href="https://www.facebook.com/surendrashrestha10"><i class="icon-social-facebook"></i></a>
                 </li>
                 <li>
                   <a class="twitter" href="https://twitter.com/suren_37"><i class="icon-social-twitter"></i></a>
-                </li>
-                <li>
-                  <a class="linkedin" href="https://www.linkedin.com/in/surendra-shrestha-7a8151137/"><i class="icon-social-linkedin"></i></a>
                 </li>
               </ul>
               <p>Copyright © 2019 Surendra37. All Right Reserved</p>
