--- a/index.html
+++ b/index.html
@@ -155,16 +155,35 @@
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="profile-wrapper wow fadeInRight" data-wow-delay="0.3s">
               <h3>Hi!</h3>
-              <p>To summarize myself in a few lines, I am a man with a few words with a deep passion for programming. 
-                I love to explore and learn new ideas and use it in service to others. 
-                I think, I can get a grasp of new technologies comparitevely faster and is always ready to learn something new. 
+              <p>
+                <!-- I am a result-oriented developer since 2017 with a lot of professional experience in Windows desktop software development. 
+                I always use the latest technologies and best practices, so you can be sure that you will get the highest possible quality. 
+                Client satisfaction is the most important for me.<br/> -->
+                
+                Over the year of working, I have gained expertise that covers:<br/>
+                ✔ Architecting your next enterprise level software solution<br/>
+                ✔ Programming anything from your imagination to a solution.<br/>
+                ✔ Web Development<br/>
+                ✔ Desktop Application Development<br/>
+                ✔ Database Development<br/>
+                ✔ Debugging and maintenance of existing desktop applications<br/>
+                ✔ Web scraping<br/>
+                <br/>
+                My technical skillset includes:<br/>
+                ✔ C# ✔ .NET Framework ✔ .NET CORE<br/>
+                ✔ ASP.NET (WebForms, MVC, Core)<br/>
+                ✔ WPF ✔ Windows Forms ✔ MVVM ✔ Material Design UI<br/>
+                ✔ Microsoft SQL Server ✔ MySQL ✔ SQLite<br/>
+                ✔ MS Sharepoint<br/>
+                ✔ Scrapy<br/>
+                ✔ Docker
               </p>
               <p>Thank you. Have a great time. 😁😁😁🤙 </p>
               <div class="about-profile">
                 <ul class="admin-profile">
                   <li><span class="pro-title"> Name </span> <span class="pro-detail">Surendra Shrestha</span></li>
                   <li><span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span></li>
-                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">2+ Years</span></li>
+                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">Since 2017(3+ years)</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">Nepal</span></li>
                   <li><span class="pro-title"> Location </span> <span class="pro-detail">Kathmandu</span></li>
                   <li><span class="pro-title"> E-mail </span> <span class="pro-detail">shresthasurendra37@gmail.com</span></li>
@@ -172,7 +191,7 @@
                   <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
                 </ul>
               </div>
-              <a href="https://drive.google.com/open?id=1y8to7fCw-R3FC3dRpeNkCN7-jPW0y91L" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
+              <a href="assets/img/surendra-shrestha-resume.pdf" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
               <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
             </div>
           </div>   
@@ -187,7 +206,7 @@
       <div class="container">
         <div class="row">
           <!-- Services item -->
-          <div class="col-md-6 col-lg-4 col-xs-12">
+          <div class="col-md-6 col-lg-3 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="0.3s">
               <div class="icon">
                 <i class="icon-grid"></i>
@@ -199,7 +218,7 @@
             </div>
           </div>
           <!-- Services item -->
-          <div class="col-md-6 col-lg-4 col-xs-12">
+          <div class="col-md-6 col-lg-3 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon">
                 <i class="icon-layers"></i>
@@ -211,29 +230,30 @@
             </div>
           </div>
           <!-- Services item -->
-          <div class="col-md-6 col-lg-4 col-xs-12">
+          <div class="col-md-6 col-lg-3 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="0.9s">
               <div class="icon">
                 <i class="icon-briefcase"></i>
               </div>
               <div class="services-content">
-                <h3><a href="#">Assessment</a></h3>
-                <p>Remember me if you need any help in your college/university assessments</p>
+                <h3><a href="#">Remote work</a></h3>
+                <p>I am open for remote work for you to bring your project to life or for its maintainence/improvements
+                </p>
               </div>
             </div>
           </div>
           <!-- Services item -->
-          <!-- <div class="col-md-6 col-lg-3 col-xs-12">
+          <div class="col-md-6 col-lg-3 col-xs-12">
             <div class="services-item wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon">
                 <i class="icon-bubbles"></i>
               </div>
               <div class="services-content">
                 <h3><a href="#">Consultancy</a></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse condi.</p>
+                <p>You can remember me for consulting on your problems, as well as other programming related works.</p>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </section>
@@ -337,16 +357,67 @@
         <div class="row">    
           <!-- Portfolio Recent Projects -->
           <div id="portfolio" class="row wow fadeInDown" data-wow-delay="0.4s">
-            <div class="col-md-12">
+            <div class="col-md-6 col-lg-3 col-xs-12">
               <div class="portfolio-item">
                 <div class="shot-item">
-                  <img src="assets/img/gallery/stock.png" alt="application image" />  
+                  <img src="portfolios/nepseapp/portfolio.png" alt="application image" />  
                   <div class="overlay">
                     <div class="icons">
-                      <a class="lightbox preview" href="portfolios/finance/index.html">
+                      <a class="lightbox preview" href="portfolios/nepseapp/portfolio.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="#">
+                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
+                        <i class="icon-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>               
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3 col-xs-12">
+              <div class="portfolio-item">
+                <div class="shot-item">
+                  <img src="portfolios/nepseapp/live.png" alt="application image" />  
+                  <div class="overlay">
+                    <div class="icons">
+                      <a class="lightbox preview" href="portfolios/nepseapp/live.png">
+                        <i class="icon-eye"></i>
+                      </a>
+                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
+                        <i class="icon-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>               
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3 col-xs-12">
+              <div class="portfolio-item">
+                <div class="shot-item">
+                  <img src="portfolios/nepseapp/marketdepth.png" alt="application image" />  
+                  <div class="overlay">
+                    <div class="icons">
+                      <a class="lightbox preview" href="portfolios/nepseapp/marketdepth.png">
+                        <i class="icon-eye"></i>
+                      </a>
+                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
+                        <i class="icon-link"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>               
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3 col-xs-12">
+              <div class="portfolio-item">
+                <div class="shot-item">
+                  <img src="portfolios/nepseapp/dashboard.png" alt="application image" />  
+                  <div class="overlay">
+                    <div class="icons">
+                      <a class="lightbox preview" href="portfolios/nepseapp/dashboard.png">
+                        <i class="icon-eye"></i>
+                      </a>
+                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -362,10 +433,9 @@
     <!-- Portfolio Section Ends --> 
 
     <!-- Counter Area Start-->
-    <section class="counter-section section-padding">
+    <!-- <section class="counter-section section-padding">
       <div class="container">
         <div class="row">
-          <!-- Counter Item -->
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.3s">
               <div class="icon"><i class="icon-briefcase"></i></div>
@@ -373,7 +443,6 @@
               <p>Project Working</p>
             </div>
           </div>
-          <!-- Counter Item -->
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.6s">
               <div class="icon"><i class="icon-check"></i></div>
@@ -381,7 +450,6 @@
               <p>Project Done</p>
             </div>
           </div>
-          <!-- Counter Item -->
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="0.9s">
               <div class="icon"><i class="icon-diamond"></i></div>
@@ -389,7 +457,6 @@
               <p>Awards Received</p>
             </div>
           </div>
-          <!-- Counter Item -->
           <div class="col-md-3 col-sm-6 work-counter-widget text-center">
             <div class="counter wow fadeInDown" data-wow-delay="1.2s">
               <div class="icon"><i class="icon-heart"></i></div>
@@ -399,7 +466,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Counter Area End-->
 
     <!-- Contact Section Start -->
@@ -499,7 +566,7 @@
                   <a class="twitter" href="https://twitter.com/suren_37"><i class="icon-social-twitter"></i></a>
                 </li>
               </ul>
-              <p>Copyright © 2019 Surendra37. All Right Reserved</p>
+              <p>Copyright © 2020 Surendra37. All Right Reserved</p>
             </div>
           </div>
         </div>
@@ -535,12 +602,12 @@
         img[src*="000webhost"][style],
         body > div:nth-last-of-type(1)[style]
         {
-    	opacity: 0 !important;
-	    pointer-events:none !important;
-    	width: 0px !important;
-    	height: 0px !important;
-    	visibility:hidden !important;
-	    display:none !important;
+          opacity: 0 !important;
+          pointer-events:none !important;
+          width: 0px !important;
+          height: 0px !important;
+          visibility:hidden !important;
+          display:none !important;
         }
 	</style> 
   </body>
