--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 My technical skillset includes:<br/>
                 ✔ C# ✔ .NET Framework ✔ .NET CORE<br/>
                 ✔ ASP.NET (WebForms, MVC, Core)<br/>
-                ✔ WPF ✔ Windows Forms ✔ MVVM ✔ Material Design UI<br/>
+                ✔ WPF ✔ Windows Forms ✔ MVVM ✔ Material Design UI ✔ Prism Framework<br/>
                 ✔ Microsoft SQL Server ✔ MySQL ✔ SQLite<br/>
                 ✔ MS Sharepoint<br/>
                 ✔ Scrapy<br/>
@@ -182,7 +182,7 @@
               <div class="about-profile">
                 <ul class="admin-profile">
                   <li><span class="pro-title"> Name </span> <span class="pro-detail">Surendra Shrestha</span></li>
-                  <li><span class="pro-title"> Age </span> <span class="pro-detail">25 Years</span></li>
+                  <li><span class="pro-title"> Age </span> <span class="pro-detail">26 Years</span></li>
                   <li><span class="pro-title"> Experience </span> <span class="pro-detail">Since 2017(3+ years)</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">Nepal</span></li>
                   <li><span class="pro-title"> Location </span> <span class="pro-detail">Kathmandu</span></li>
@@ -366,7 +366,7 @@
                       <a class="lightbox preview" href="portfolios/nepseapp/portfolio.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
+                      <a class="link" href="https://github.com/surendra37/website/raw/master/assets/Profile.pdf">
                         <i class="icon-link"></i>
                       </a>
                     </div>
