--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
                 </ul>
               </div>
-              <a href="assets/img/surendra-shrestha-resume.pdf" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
+              <a href="assets/Profile.pdf" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
               <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
             </div>
           </div>   
@@ -366,7 +366,7 @@
                       <a class="lightbox preview" href="portfolios/nepseapp/portfolio.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://github.com/surendra37/website/raw/master/assets/Profile.pdf">
+                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
                         <i class="icon-link"></i>
                       </a>
                     </div>
