--- a/html/index.html
+++ b/html/index.html
@@ -160,33 +160,38 @@
                 I always use the latest technologies and best practices, so you can be sure that you will get the highest possible quality. 
                 Client satisfaction is the most important for me.<br/> -->
                 
-                Over the year of working, I have gained expertise that covers:<br/>
-                ✔ Architecting your next enterprise level software solution<br/>
-                ✔ Programming anything from your imagination to a solution.<br/>
-                ✔ Web Development<br/>
-                ✔ Desktop Application Development<br/>
-                ✔ Database Development<br/>
-                ✔ Debugging and maintenance of existing desktop applications<br/>
-                ✔ Web scraping<br/>
-                <br/>
-                My technical skillset includes:<br/>
-                ✔ C# ✔ .NET Framework ✔ .NET CORE<br/>
-                ✔ ASP.NET (WebForms, MVC, Core)<br/>
-                ✔ WPF ✔ Windows Forms ✔ MVVM ✔ Material Design UI ✔ Prism Framework<br/>
-                ✔ Microsoft SQL Server ✔ MySQL ✔ SQLite<br/>
-                ✔ MS Sharepoint<br/>
-                ✔ Scrapy<br/>
-                ✔ Docker
+                Over the year of working, I have gained expertise that covers:
+
+                ✔ Architecting your next enterprise-level software solution
+                ✔ Programming anything from your imagination to a solution. 
+                ✔ Restful API Development
+                ✔ Web Application Development
+                ✔ Desktop Application Development
+                ✔ SQL Database
+                ✔ Debugging and maintenance of existing desktop applications
+                ✔ Web scraping
+                ✔ ETL ✔ Batch/Bulk/Distributed processing 
+                ✔ Certified Amazon Web Service (AWS) Developer
+
+                My technical skillset includes:
+
+                ✔ C# ✔ .NET Framework ✔ .NET CORE 
+                ✔ ASP.NET (Web-Forms, MVC, Core) 
+                ✔ WPF ✔ Windows Forms ✔ MVVM ✔ Material Design UI
+                ✔ Microsoft SQL Server ✔ PostgreSQL ✔ MySQL ✔ SQLite
+                ✔ Selenium ✔ Playwright ✔ RestSharp ✔ HtmlAgilityPack
+                ✔ Docker ✔AWS
+                ✔ RabbitMQ
               </p>
               <p>Thank you. Have a great time. 😁😁😁🤙 </p>
               <div class="about-profile">
                 <ul class="admin-profile">
                   <li><span class="pro-title"> Name </span> <span class="pro-detail">Surendra Shrestha</span></li>
-                  <li><span class="pro-title"> Age </span> <span class="pro-detail">26 Years</span></li>
-                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">Since 2017(3+ years)</span></li>
+                  <li><span class="pro-title"> Age </span> <span class="pro-detail">29 Years</span></li>
+                  <li><span class="pro-title"> Experience </span> <span class="pro-detail">Since 2017(6+ years)</span></li>
                   <li><span class="pro-title"> Country </span> <span class="pro-detail">Nepal</span></li>
-                  <li><span class="pro-title"> Location </span> <span class="pro-detail">Kathmandu</span></li>
-                  <li><span class="pro-title"> E-mail </span> <span class="pro-detail">shresthasurendra37@gmail.com</span></li>
+                  <li><span class="pro-title"> Location </span> <span class="pro-detail">Bhaktapur</span></li>
+                  <li><span class="pro-title"> E-mail </span> <span class="pro-detail">mail@surendrashrestha.info.np</span></li>
                   <li><span class="pro-title"> Phone </span> <span class="pro-detail">+977 9843623018</span></li>
                   <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
                 </ul>
@@ -225,7 +230,7 @@
               </div>
               <div class="services-content">
                 <h3><a href="#">Database Design</a></h3>
-                <p>Experienced in database design for MySQL, SQLite and other similar sql servers</p>
+                <p>Experienced in database design for MS SQL, PostgreSQL, SQLite and other similar sql servers</p>
               </div>
             </div>
           </div>
@@ -272,8 +277,39 @@
                 </li>
                 <li>
                   <div class="content-text">
+                    <h3 class="line-title">Sr. Software Engineer</h3>
+                    <span>Apr 2023 - Present</span>
+                    <p class="line-text">
+                      # Extract, Transform, Load (ETL) using Pentaho
+                      # Batch data processing on huge volume of data (.NET 5)
+                      # BDD Testing using Spec flow
+                      # Dependency Injection - Autofac, Microsoft DI
+                      # AWS Certified Developer - Associate
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="content-text">
+                    <h3 class="line-title">Freelance Software Engineer</h3>
+                    <span>Jan 2021 - Apr 2023</span>
+                    <p class="line-text">
+                      # Web scraping and plugin development for wordpress for TradingView charts, login and more...
+                      # Selenium WebDriver and RestSharp for Web Scraping
+                      # Windows application for social media app for gamers
+                      # Multipurpose automation tools for different behavior
+                      # .NET Core Web API for accessing MS SQL database
+                      # .NET Core client consuming the API (Winform+WPF app)
+                      # Database synchronization using .NET (ETL)
+                      # Task scheduler based jobs to run on schedule
+                      # Generate installer file (MSI)
+                      # Social media application for gamers>
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="content-text">
                     <h3 class="line-title">Software Developer - Asteroid Venture</h3>
-                    <span>Nov 2018 - Present</span>
+                    <span>Dec 2018 - Jan 2022</span>
                     <p class="line-text">
                       # Started working on Enterprise Content Management (ECM) Migration Software.<br />
                       # Worked on migration of data from different ECM system to Microsoft's Sharepoint.<br />
@@ -287,7 +323,7 @@
                 <li>
                   <div class="content-text">
                     <h3 class="line-title">Dot net Developer - Dotmark Solutions</h3>
-                    <span>Nov 2017 - Nov 2018</span>
+                    <span>Dec 2017 - Dec 2018</span>
                     <p class="line-text">
                       # Started Programming career as a .NET Software programmer.<br />
                       # Got involved on Desktop application for health/hospital management system.<br />
@@ -366,7 +402,7 @@
                       <a class="lightbox preview" href="portfolios/nepseapp/portfolio.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
+                      <a class="link" href="#">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -383,7 +419,7 @@
                       <a class="lightbox preview" href="portfolios/nepseapp/live.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
+                      <a class="link" href="#">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -400,7 +436,7 @@
                       <a class="lightbox preview" href="portfolios/nepseapp/marketdepth.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
+                      <a class="link" href="#">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -417,7 +453,7 @@
                       <a class="lightbox preview" href="portfolios/nepseapp/dashboard.png">
                         <i class="icon-eye"></i>
                       </a>
-                      <a class="link" href="https://drive.google.com/file/d/10VfXPw6LJNcv7h23v8V2mG4Ag-FTGyDR/view?usp=sharing">
+                      <a class="link" href="#">
                         <i class="icon-link"></i>
                       </a>
                     </div>
@@ -523,13 +559,13 @@
                     <div class="contact-icon">
                       <i class="fa fa-map-marker"></i>
                     </div>
-                    <p>Satungal, Kathmandu</p>
+                    <p>Jhaukhel, Bhaktapur, Nepal</p>
                   </div>
                   <div class="single-contact">
                     <div class="contact-icon">
                       <i class="fa fa-envelope"></i>
                     </div>
-                    <p><a href="mailto:shresthasurendra37@gmail.com">shresthasurendra37@gmail.com</a></p>
+                    <p><a href="mailto:mail@surendrashrestha.info.np">mail@surendrashrestha.info.np</a></p>
                   </div>
                   <div class="single-contact">
                     <div class="contact-icon">
@@ -566,7 +602,7 @@
                   <a class="twitter" href="https://twitter.com/suren_37"><i class="icon-social-twitter"></i></a>
                 </li>
               </ul>
-              <p>Copyright © 2020 Surendra37. All Right Reserved</p>
+              <p>Copyright © 2024 Surendra37. All Right Reserved</p>
             </div>
           </div>
         </div>
@@ -595,20 +631,5 @@
     <script src="assets/js/form-validator.min.js"></script>
     <script src="assets/js/contact-form-script.min.js"></script>
     <script src="assets/js/map.js"></script>
-    <style> 
-        img[alt*="www.000webhost.com"],
-        img[alt*="www.000webhost.com"][style],
-        img[src*="000webhost"],
-        img[src*="000webhost"][style],
-        body > div:nth-last-of-type(1)[style]
-        {
-          opacity: 0 !important;
-          pointer-events:none !important;
-          width: 0px !important;
-          height: 0px !important;
-          visibility:hidden !important;
-          display:none !important;
-        }
-	</style> 
   </body>
 </html>
