--- a/html/index.html
+++ b/html/index.html
@@ -549,7 +549,7 @@
               </div>
             </div> -->
             <div class="col-md-6 col-lg-6 col-sm-12">
-                <object style="border:0; height: 450px; width: 100%;" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1040.727949991624!2d85.2474415486345!3d27.683930056930024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb22ebbc4ec891%3A0x83e995e1928da3dd!2zMjfCsDQxJzAxLjUiTiA4NcKwMTQnNTMuMSJF!5e0!3m2!1sen!2snp!4v1573743084523!5m2!1sen!2snp"></object>
+                <object style="border:0; height: 450px; width: 100%;" data="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1485.3935329050391!2d85.43222093502023!3d27.69006904004583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snp!4v1722625612356!5m2!1sen!2snp"></object>
                 </div>
             <div class="col-md-6 col-lg-6 col-sm-12">
               <div class="footer-right-area wow fadeIn">
