added line break

--- a/html/index.html
+++ b/html/index.html
@@ -280,11 +280,11 @@
                     <h3 class="line-title">Sr. Software Engineer</h3>
                     <span>Apr 2023 - Present</span>
                     <p class="line-text">
-                      # Extract, Transform, Load (ETL) using Pentaho
-                      # Batch data processing on huge volume of data (.NET 5)
-                      # BDD Testing using Spec flow
-                      # Dependency Injection - Autofac, Microsoft DI
-                      # AWS Certified Developer - Associate
+                      # Extract, Transform, Load (ETL) using Pentaho<br />
+                      # Batch data processing on huge volume of data (.NET 5)<br />
+                      # BDD Testing using Spec flow<br />
+                      # Dependency Injection - Autofac, Microsoft DI<br />
+                      # AWS Certified Developer - Associate<br />
                     </p>
                   </div>
                 </li>
@@ -293,16 +293,16 @@
                     <h3 class="line-title">Freelance Software Engineer</h3>
                     <span>Jan 2021 - Apr 2023</span>
                     <p class="line-text">
-                      # Web scraping and plugin development for wordpress for TradingView charts, login and more...
-                      # Selenium WebDriver and RestSharp for Web Scraping
-                      # Windows application for social media app for gamers
-                      # Multipurpose automation tools for different behavior
-                      # .NET Core Web API for accessing MS SQL database
-                      # .NET Core client consuming the API (Winform+WPF app)
-                      # Database synchronization using .NET (ETL)
-                      # Task scheduler based jobs to run on schedule
-                      # Generate installer file (MSI)
-                      # Social media application for gamers>
+                      # Web scraping and plugin development for wordpress for TradingView charts, login and more...<br />
+                      # Selenium WebDriver and RestSharp for Web Scraping<br />
+                      # Windows application for social media app for gamers<br />
+                      # Multipurpose automation tools for different behavior<br />
+                      # .NET Core Web API for accessing MS SQL database<br />
+                      # .NET Core client consuming the API (Winform+WPF app)<br />
+                      # Database synchronization using .NET (ETL)<br />
+                      # Task scheduler based jobs to run on schedule<br />
+                      # Generate installer file (MSI)<br />
+                      # Social media application for gamers><br />
                     </p>
                   </div>
                 </li>
